--- a/core/app/views/Applys/procures.html
+++ b/core/app/views/Applys/procures.html
@@ -1,91 +1,93 @@
-#{extends 'main_full.html'/}
-#{set title:"请款单列表" /}
+#{extends 'main_full_v3.html'/}
+#{set title:"采购请款单列表" /}
 #{set 'moreScripts'}
     #{script 'component/pagination.coffee'/}
 #{/set}
 
+<div class="row">
+  <div class="col-md-12">
+    <div class="box box-primary">
+      <form action="@{Applys.procures()}" class="form-inline" id="applys_form">
+        <div class="box-header with-border">
+          <div class="row-fluid">
+            <div class="form-group">
+              <div class="input-group">
+                <div class="input-group-addon">From:</div>
+                <input style="width:100px;" class="form-control" id="date_from" name="p.from" value="${p.from.date()}">
+              </div>
+            </div>
 
-#{form @Applys.procures(), class:'search_form', id:'applys_form', method:'POST'}
-<div class="row-fluid">
-  <div class="span12">
-    <div class="input-prepend input-append inline">
-      <span class="add-on">From:</span>
-      <input type="date" name="p.from" value="${p.from.date()}">
-      <span class="add-on">To:</span>
-      <input type="date" name="p.to" value="${p.to.date()}">
-    </div>
+            <div class="form-group">
+              <div class="input-group">
+                <div class="input-group-addon">To:</div>
+                <input style="width:100px;" class="form-control" id="date_to" name="p.to" value="${p.to.date()}">
+              </div>
+            </div>
 
-    <div class="inline">
-        #{select_enum name:'p.dateType', items:models.view.post.ProcreApplyPost.DateType.values(), value:p.dateType/}
-    </div>
+          #{select_enum name:'p.dateType', items:models.view.post.ProcreApplyPost.DateType.values(), value:p.dateType,
+          class:"form-control"/}
 
-    <div class="inline">
-      <select name="p.supplierId" class="selectize" style="width:150px;">
-        <option value="">供应商</option>
-          #{list items:suppliers, as:'s'}
-            <option value="${s.id}" ${s.id == p.supplierId?'selected':''}>${s.name}</option>
+            <select name="p.supplierId" class="form-control selectize" style="width:150px;">
+              <option value="">供应商</option>
+            #{list items:suppliers, as:'s'}
+              <option value="${s.id}" ${s.id == p.supplierId?'selected':''}>${s.name}</option>
+            #{/list}
+            </select>
+
+            <select name="p.isneedPay" class="form-control">
+              <option ${p.isneedPay==0 ? 'selected' : ''} value="0">请款开关</option>
+              <option ${p.isneedPay==1 ? 'selected' : ''} value="1">不需请款</option>
+            </select>
+
+            <div class="input-group">
+              <div class="input-group-addon"><i class="icon-search"></i></div>
+              <input class="form-control" name="p.search" style="width: 180px;" value="${p.search}" placeHolder="请款单编号或采购计划ID">
+            </div>
+
+            <button class="btn btn-primary" data-loading>搜索</button>
+            <input type="hidden" name="p.page" value="${p.page}">
+          </div>
+        </div>
+
+        <div class="box-body">
+          <table class="table table-bordered table-condensed">
+            <tr>
+              <th>#</th>
+              <th>请款单编号</th>
+              <th>合作伙伴</th>
+              <th>已经请款金额</th>
+              <th>剩余请款金额</th>
+              <th>总需要请款金额</th>
+              <th>修正值总额</th>
+              <th>最新更新时间</th>
+              <th>创建时间</th>
+            </tr>
+          #{list items:applyes, as:'apply'}
+            <tr>
+              <td>${apply.id}</td>
+              <td><a href="@{Applys.procure(apply.id)}">${apply.serialNumber}</a></td>
+              <td>${apply.cooperator.fullName}</td>
+                #{set currency:apply.currency()/}
+              <td>${currency?.symbol()} ${new java.math.BigDecimal(apply.appliedAmount()).setScale(2, 4).floatValue().format('#,###.##')}</td>
+              <td>${currency?.symbol()} ${new java.math.BigDecimal(apply.leftAmount()).setScale(2, 4).floatValue().format('#,###.##')}</td>
+              <td>${currency?.symbol()} ${new java.math.BigDecimal(apply.totalAmount()).setScale(2, 4).floatValue().format('#,###.##')}</td>
+              <td>${currency?.symbol()} ${new java.math.BigDecimal(apply.fixValueAmount()).setScale(2, 4).floatValue().format('#,###.##')}</td>
+              <td>#{time_tooltip_v3 time:apply.updateAt, datetime:true/}</td>
+              <td>#{time_tooltip_v3 time:apply.createdAt, datetime:true/}</td>
+            </tr>
           #{/list}
-      </select>
+          </table>
+        </div>
+
+        <div class="box-footer">
+        #{if applyes.size() == 0}
+          暂时还没有请款单
+        #{/if}
+        #{else }
+            #{bootstrap_pager_v3 pi:p, url:'' /}
+        #{/else}
+        </div>
+      </form>
     </div>
-
-    <div class="inline">
-      <select name="p.isneedPay">
-        <option ${p.isneedPay==0 ? 'selected' : ''} value="0">请款开关</option>
-        <option ${p.isneedPay==1 ? 'selected' : ''} value="1">不需请款</option>
-      </select>
-    </div>
-
-    <div class="input-prepend input-append inline">
-      <span class="add-on"><i class="icon-search"></i></span>
-      <input type="hidden" name="p.page" value="${p.page}">
-      <input type="text" name="p.search" style="width: 180px;" value="${p.search}" placeHolder="请款单编号或采购计划ID">
-      <button class="btn btn-primary" data-loading>搜索</button>
-    </div>
-  </div>
-</div>
-
-<div class="row-fluid">
-  <table class="table table-bordered table-condensed">
-    <tr>
-      <th>#</th>
-      <th>请款单编号</th>
-      <th>合作伙伴</th>
-      <th>已经请款金额</th>
-      <th>剩余请款金额</th>
-      <th>总需要请款金额</th>
-      <th>修正值总额</th>
-      <th>最新更新时间</th>
-      <th>创建时间</th>
-    </tr>
-      #{list items:applyes, as:'apply'}
-        <tr>
-          <td>${apply.id}</td>
-          <td><a href="@{Applys.procure(apply.id)}">${apply.serialNumber}</a></td>
-          <td>${apply.cooperator.fullName}</td>
-            #{set currency:apply.currency()/}
-          <td>${currency?.symbol()} ${new java.math.BigDecimal(apply.appliedAmount()).setScale(2, 4)
-          .floatValue().format('#,###.##')}</td>
-          <td>${currency?.symbol()} ${new java.math.BigDecimal(apply.leftAmount()).setScale(2, 4)
-          .floatValue().format('#,###.##')}</td>
-          <td>${currency?.symbol()} ${new java.math.BigDecimal(apply.totalAmount()).setScale(2, 4)
-          .floatValue().format('#,###.##')}</td>
-          <td>${currency?.symbol()} ${new java.math.BigDecimal(apply.fixValueAmount()).setScale(2, 4)
-          .floatValue().format('#,###.##')}</td>
-          <td>#{time_tooltip time:apply.updateAt, datetime:true/}</td>
-          <td>#{time_tooltip time:apply.createdAt, datetime:true/}</td>
-        </tr>
-      #{/list}
-  </table>
-</div>
-#{/form}
-
-<div class="row-fluid" id="order_list">
-  <div class="span12">
-  #{if applyes.size() == 0}
-    暂时还没有请款单
-  #{/if}
-  #{else }
-      #{bootstrap_pager pi:p, url:'' /}
-  #{/else}
   </div>
 </div>
