--- a/core/app/views/Applys/transports.html
+++ b/core/app/views/Applys/transports.html
@@ -1,89 +1,101 @@
-#{extends 'main_full.html'/}
-#{set title:"请款单列表" /}
+#{extends 'main_full_v3.html'/}
+#{set title:"物流请款单列表" /}
 #{set 'moreScripts'}
     #{script 'component/pagination.coffee'/}
 #{/set}
 
-#{form @Applys.transports(), class:'search_form', id:'transports_form', method:'POST'}
-<div class="row-fluid">
-  <div class="span12">
-    <div class="input-prepend inline">
-      <span class="add-on">From:</span>
-      <input type="date" name="p.from" value="${p.from.date()}">
-    </div>
-    <div class="input-prepend inline">
-      <span class="add-on">To:</span>
-      <input type="date" name="p.to" value="${p.to.date()}">
-    </div>
 
-    <div class="inline">
-        #{select_enum name:'p.dateType', items:models.view.post.TransportApplyPost.DateType.values() , value: p.dateType /}
-    </div>
-    <div class="inline">
-        #{select 'p.cooperId', items:suppliers, labelProperty:'name', valueProperty:'id' ,value: p.cooperId }
-            #{option ''}合作伙伴#{/option}
-        #{/select}
-    </div>
-    <div class="inline">
-        #{select 'p.userId', items:users, labelProperty:'username', valueProperty:'id' ,value: p.userId }
-            #{option ''}请款人#{/option}
-        #{/select}
-    </div>
-    <div class="input-prepend input-append inline">
-      <span class="add-on"><i class="icon-search"></i></span>
-      <input type="hidden" name="p.page" value="${p.page}">
-      <input type="text" style="width:120px;" name="p.search" placeholder="请款单编号" value="${p.search}">
-      <button class="btn btn-primary" data-loading>搜索</button>
-    </div>
-  </div>
-</div>
+<div class="row">
+  <div class="col-md-12">
+    <div class="box box-primary">
+      <form action="@{Applys.transports()}" class="form-inline" id="transports_form">
+        <div class="box-header with-border">
+          <div class="row-fluid">
+            <div class="form-group">
+              <div class="input-group">
+                <div class="input-group-addon">From:</div>
+                <input style="width:100px;" class="form-control" id="date_from" name="p.from" value="${p.from.date()}">
+              </div>
+            </div>
 
-    #{if applyes.size() == 0}
-    <div class="row-fluid" id="order_list">
-      <div class="span12">
-        暂时还没有物流请款单
-      </div>
-    </div>
-    #{/if}
-    #{else }
-    <div class="row-fluid">
-      <table class="table table-bordered table-condensed">
-        <tr>
-          <th>#</th>
-          <th>请款单编号</th>
-          <th>合作伙伴</th>
-          <th>总请款金额</th>
-          <th>总实际支付金额</th>
-          <th>最新更新时间</th>
-          <th>创建时间</th>
-        </tr>
+            <div class="form-group">
+              <div class="input-group">
+                <div class="input-group-addon">To:</div>
+                <input style="width:100px;" class="form-control" id="date_to" name="p.to" value="${p.to.date()}">
+              </div>
+            </div>
+
+          #{select_enum name:'p.dateType', items:models.view.post.ProcreApplyPost.DateType.values(), value:p.dateType, class:"form-control"/}
+
+            <select name="p.cooperId" class="form-control selectize" style="width:250px;">
+              <option value="">合作伙伴</option>
+            #{list items:suppliers, as:'s'}
+              <option value="${s.id}" ${s.id == p.cooperId?'selected':''}>${s.name}</option>
+            #{/list}
+            </select>
+
+            <select name="p.userId" class="form-control selectize" style="width:150px;">
+              <option value="">请款人</option>
+            #{list items:users, as:'s'}
+              <option value="${s.id}" ${s.id == p.userId?'selected':''}>${s.username}</option>
+            #{/list}
+            </select>
+
+            <div class="input-group">
+              <div class="input-group-addon"><i class="icon-search"></i></div>
+              <input class="form-control" name="p.search" style="width: 180px;" value="${p.search}" placeHolder="请款单编号">
+            </div>
+
+            <button class="btn btn-primary" data-loading>搜索</button>
+            <input type="hidden" name="p.page" value="${p.page}">
+          </div>
+        </div>
+
+        <div class="box-body">
+          <table class="table table-bordered table-condensed">
+            <tr>
+              <th>#</th>
+              <th>请款单编号</th>
+              <th>合作伙伴</th>
+              <th>总请款金额</th>
+              <th>总实际支付金额</th>
+              <th>最新更新时间</th>
+              <th>创建时间</th>
+            </tr>
           #{list items:applyes, as:'apply'}
             <tr>
               <td>${apply.id}</td>
               <td><a href="@{Applys.transport(apply.id)}">${apply.serialNumber}</a></td>
               <td>${apply.cooperator.fullName}</td>
               <td>
-                <a href="#" rel='tooltip' title="CNY: ${apply.totalFees()._2}">
-                ${helper.Currency.USD.symbol()} ${new java.math.BigDecimal(apply.totalFees()._1).setScale(2,
-                4).floatValue().format('#,###.##')}
+                <a href="#" data-toggle="tooltip" title="CNY: ${apply.totalFees()._2}">
+                ${helper.Currency.USD.symbol()} ${new java.math.BigDecimal(apply.totalFees()._1).setScale(2,4).floatValue().format('#,###.##')}
                 </a>
               </td>
               <td>
-                <a href="#" rel='tooltip' title="CNY: ${new java.math.BigDecimal(apply.totalActualPaid()._2).setScale(2,
-                4).floatValue().format('#,###.##')}">
-                ${helper.Currency.USD.symbol()} ${new java.math.BigDecimal(apply.totalActualPaid()._1).setScale(2,
-                4).floatValue().format('#,###.##')}
+                <a href="#" data-toggle="tooltip" title="CNY: ${new java.math.BigDecimal(apply.totalActualPaid()._2).setScale(2,4).floatValue().format('#,###.##')}">
+                ${helper.Currency.USD.symbol()} ${new java.math.BigDecimal(apply.totalActualPaid()._1).setScale(2,4).floatValue().format('#,###.##')}
                 </a>
               </td>
-              <td>#{time_tooltip time:apply.updateAt, datetime:true/}</td>
-              <td>#{time_tooltip time:apply.createdAt, datetime:true/}</td>
+              <td>#{time_tooltip_v3 time:apply.updateAt, datetime:true/}</td>
+              <td>#{time_tooltip_v3 time:apply.createdAt, datetime:true/}</td>
             </tr>
           #{/list}
-      </table>
+          </table>
+        </div>
+
+        <div class="box-footer">
+        #{if applyes.size() == 0}
+          暂时还没有物流请款单
+        #{/if}
+        #{else }
+            #{bootstrap_pager_v3 pi:p, url:'' /}
+        #{/else}
+        </div>
+      </form>
     </div>
-        #{bootstrap_pager pi:p, url:'' /}
-    #{/else}
-#{/form}
+  </div>
+</div>
 
 
 
