--- a/core/app/views/ShipItems/index.html
+++ b/core/app/views/ShipItems/index.html
@@ -1,4 +1,4 @@
-#{extends 'main_full.html' /}
+#{extends 'main_full_v3.html' /}
 #{set title: '运输项目列表' /}
 #{set 'moreScripts'}
 #{/set}
@@ -8,116 +8,136 @@
     $("input[name='p.to']").data('dateinput').setValue(new Date());
   });
 </script>
+
 #{flash_alert /}
 
-<div class="row-fluid">
-  <form action="@{ShipItems.index()}" class="search_form" method="POST">
-    <div class="span12">
-      <div class="inline">
-        <button id="today" class="btn"><i class="icon-search"></i> Today</button>
-      </div>
-      <div class="input-prepend inline">
-        <span class="add-on">From:</span>
-        <input type="date" style="width:90px;" name="p.from" value="${p.from.date()}">
-      </div>
-      <div class="input-prepend inline">
-        <span class="add-on" style="margin-left:20px;">To:</span>
-        <input type="date" style="width:90px;" name="p.to" value="${p.to.date()}">
-      </div>
+<div class="row">
+  <div class="col-md-12">
+    <div class="box box-primary">
+      <form action="@{ShipItems.index()}" method="POST" class="form-inline" id='search_form'>
+        <div class="box-header with-border">
+          <div class="row-fluid">
+            <button class="btn btn-primary" id="today"><i class="icon-search"></i> Today</button>
 
-    #{select 'p.dateType', items: p.dateTypes, labelProperty: '_2', valueProperty: '_1', value: p.dateType, class: 'inline selectize' /}
+            <div class="form-group">
+              <div class="input-group">
+                <div class="input-group-addon">From:</div>
+                <input style="width:100px;" class="form-control" role="date" name="p.from" value="${p.from.date()}">
+              </div>
+            </div>
 
-    #{select 'p.whouseId', items: whouses, labelProperty: 'name', valueProperty: 'id', style:'width:120px', value:p.whouseId, class:'inline selectize'}
-        #{option ''}FBA_ALL#{/option}
-    #{/select}
+            <div class="form-group">
+              <div class="input-group">
+                <div class="input-group-addon">To:</div>
+                <input style="width:100px;" class="form-control" role="date" name="p.to" value="${p.to.date()}">
+              </div>
+            </div>
 
-    #{select 'p.centerId', items: centers, labelProperty: 'centerId', valueProperty: 'centerId', value: p.centerId, style:'width:110px', class:'inline selectize'}
-        #{option ''}FBA Center#{/option}
-    #{/select}
+          #{select 'p.dateType', items: p.dateTypes, labelProperty: '_2', valueProperty: '_1', value: p.dateType,
+          class: 'form-control selectize', style:"width:150px;"/}
 
-      <label class="checkbox inline">
-        <input type="checkbox" ${p.isHaveShipment ? 'checked' : ''} value="true" name="p.isHaveShipment">
-        包含运输单
-      </label>
+          #{select 'p.whouseId', items: whouses, labelProperty: 'name', valueProperty: 'id', style:'width:120px', value:p.whouseId, class:'form-control selectize'}
+              #{option ''}FBA_ALL#{/option}
+          #{/select}
 
-      <div class="input-prepend input-append inline">
-        <span class="add-on"><i class="icon-search"></i></span>
-        <input type="text" class="input-medium" name="p.search" value="${p.search}">
-        <button class="btn btn-primary" data-disable-with="搜索中...">搜索</button>
-      </div>
+          #{select 'p.centerId', items: centers, labelProperty: 'centerId', valueProperty: 'centerId', value: p.centerId, style:'width:130px', class:'form-control selectize'}
+              #{option ''}FBA Center#{/option}
+          #{/select}
+
+            <div class="form-group">
+              <label class="checkbox inline">
+                <input type="checkbox" ${p.isHaveShipment ? 'checked' : ''} value="true" name="p.isHaveShipment">
+                包含运输单
+              </label>
+            </div>
+
+            <div class="input-group">
+              <div class="input-group-addon"><i class="icon-search"></i></div>
+              <input style="width:200px;" class="form-control" name="p.search" value="${p.search}">
+              <input type="hidden" name="p.page" value="${p.page}">
+            </div>
+
+            <button class="btn btn-primary" data-loading>搜索</button>
+
+          </div>
+        </div>
+      </form>
+      <form action="@{Shipments.procureUnitToShipment()}" method="POST" id="new_shipment">
+        <div class="box-body">
+          <table class="table table-bordered table-condensed">
+            <tr>
+              <th><input type="checkbox" class="checkall"></th>
+              <th>#</th>
+              <th>阶段</th>
+              <th>SKU</th>
+              <th width="130px;">数量(计划/交货/入库)</th>
+              <th>可用库存</th>
+              <th>供应商</th>
+              <th>重量</th>
+              <th>仓库</th>
+              <th>建议运输方式</th>
+              <th>FBA 仓库</th>
+              <th>FBA</th>
+              <th>预计发货时间</th>
+              <th>预计到库时间</th>
+              <th>预计交货时间</th>
+              <th>实际交货时间</th>
+              <th>抵达货代</th>
+              <th>Selling</th>
+              <th>质检结果</th>
+              <th>项目名称</th>
+            </tr>
+          #{list items: units, as:'unit'}
+            <tr>
+                #{set relateShipments: unit.relateShipment()/}
+              <td>
+                  #{ifnot relateShipments.size() > 0}
+                    <label><input type="checkbox" name="units" value="${unit.id}"></label>
+                  #{/ifnot}
+              </td>
+              <td>
+                <a href="@{Deliveryments.show(unit.deliveryment?.id)}#${unit.id}" target="_blank">${unit.id}</a>
+              </td>
+              <td style="background:${unit.stage.rgb()}">${unit.stage.label()}</td>
+              <td><a href="@{Products.show(unit.sku)}" target="_blank">${unit.sku}</a></td>
+              <td>${unit.attrs.planQty}/${unit.attrs.qty}/${unit.inboundQty}</td>
+              <td>${unit.availableQty}</td>
+              <td>${unit.cooperator?.name}</td>
+              <td>${unit.totalWeight()} kg</td>
+              <td>${unit.whouse?.name}</td>
+              <td style="color:${unit.shipType?.rgb()}">
+              ${unit.shipType?.label()}<span style="color:red">${unit.isDedicated?'(专线)':''}</span>
+              </td>
+              <td>${unit.fba?.fbaCenter?.centerId}</td>
+              <td>${unit.fba?.shipmentId}</td>
+              <td>#{time_tooltip time: unit.attrs.planShipDate/}</td>
+              <td>#{time_tooltip time: unit.attrs.planArrivDate/}</td>
+              <td>#{time_tooltip time: unit.attrs.planDeliveryDate/}</td>
+              <td>#{time_tooltip time: unit.attrs.deliveryDate/}</td>
+              <td>#{yesOrNo f:unit.isPlaced/}</td>
+              <td style="word-break:break-all;">${unit.sid}</td>
+              <td>${unit.result?.label()}</td>
+              <td>${unit.projectName}</td>
+            </tr>
+          #{/list}
+          </table>
+        </div>
+
+        <div class="box-footer">
+          <div class="col-md-3">
+            <div class="input-group">
+              <input type="text" placeholder="指定到运输单" name="shipmentId" class="form-control">
+              <div class="input-group-btn">
+                <button class="btn btn-success inline" data-confirm='确认要创建吗?' data-disable-with='创建中...'>
+                  创建运输单
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </form>
     </div>
-  </form>
+  </div>
 </div>
 
-<div class="row-fluid">
-  <form action="@{Shipments.procureUnitToShipment()}" method="POST" id="new_shipment" class="search_form">
-    <table class="table table-bordered table-condensed">
-      <tr>
-        <th><input type="checkbox" class="checkall"></th>
-        <th>#</th>
-        <th>阶段</th>
-        <th>SKU</th>
-        <th width="130px;">数量(计划/交货/入库)</th>
-        <th>可用库存</th>
-        <th>供应商</th>
-        <th>重量</th>
-        <th>仓库</th>
-        <th>建议运输方式</th>
-        <th>FBA 仓库</th>
-        <th>FBA</th>
-        <th>预计发货时间</th>
-        <th>预计到库时间</th>
-        <th>预计交货时间</th>
-        <th>实际交货时间</th>
-        <th>抵达货代</th>
-        <th>Selling</th>
-        <th>质检结果</th>
-        <th>项目名称</th>
-      </tr>
-    #{list items: units, as:'unit'}
-      <tr>
-          #{set relateShipments: unit.relateShipment()/}
-        <td>
-            #{ifnot relateShipments.size() > 0}
-              <label><input type="checkbox" name="units" value="${unit.id}"></label>
-            #{/ifnot}
-        </td>
-        <td>
-          <a href="@{Deliveryments.show(unit.deliveryment?.id)}#${unit.id}" target="_blank">${unit.id}</a>
-        </td>
-        <td style="background:${unit.stage.rgb()}">${unit.stage.label()}</td>
-        <td><a href="@{Products.show(unit.sku)}" target="_blank">${unit.sku}</a></td>
-        <td>${unit.attrs.planQty}/${unit.attrs.qty}/${unit.inboundQty}</td>
-        <td>${unit.availableQty}</td>
-        <td>${unit.cooperator?.name}</td>
-        <td>${unit.totalWeight()} kg</td>
-        <td>${unit.whouse?.name}</td>
-        <td style="color:${unit.shipType?.rgb()}">
-        ${unit.shipType?.label()}<span style="color:red">${unit.isDedicated?'(专线)':''}</span>
-        </td>
-        <td>${unit.fba?.fbaCenter?.centerId}</td>
-        <td>${unit.fba?.shipmentId}</td>
-        <td>#{time_tooltip time: unit.attrs.planShipDate/}</td>
-        <td>#{time_tooltip time: unit.attrs.planArrivDate/}</td>
-        <td>#{time_tooltip time: unit.attrs.planDeliveryDate/}</td>
-        <td>#{time_tooltip time: unit.attrs.deliveryDate/}</td>
-        <td>#{yesOrNo f:unit.isPlaced/}</td>
-        <td>${unit.sid}</td>
-        <td>${unit.result?.label()}</td>
-        <td>${unit.projectName}</td>
-      </tr>
-    #{/list}
-    </table>
-
-    <div class="inline">
-      <input type="text" placeholder="指定到运输单" name="shipmentId" style="width:180px;" class="inline" value="">
-    </div>
-    <div class="inline">
-      <button class="btn btn-success inline" data-confirm='确认要创建吗?' data-disable-with='创建中...'>
-        创建运输单
-      </button>
-    </div>
-
-  </form>
-</div>
 
