--- a/core/app/views/StockRecords/index.html
+++ b/core/app/views/StockRecords/index.html
@@ -1,123 +1,131 @@
-#{extends 'main_full.html'/}
+#{extends 'main_full_v3.html'/}
 #{set title:'库存异动记录(' + records.size() + ')'/}
 #{set 'moreScripts'}
     #{script 'component/pagination.coffee'/}
     #{script 'stockrecords/index.es6'/}
 #{/set}
+
 #{flash_alert /}
 
-<form action="@{StockRecords.index()}" method="get" class="search_form" id="search_form">
-  <div class="row-fluid">
-    <div class="span12">
-      <div class="input-prepend input-append inline">
-        <span class="add-on">From:</span>
-        <input type="date" name="p.from" value="${p.from.date()}">
-        <span class="add-on">To:</span>
-        <input type="date" name="p.to" value="${p.to.date()}">
-      </div>
+<div class="row">
+  <div class="col-md-12">
+    <div class="box box-primary">
+      <form action="@{StockRecords.index()}" class="form-inline" id="payments_form">
+        <div class="box-header with-border">
+          <div class="row-fluid">
+            <div class="form-group">
+              <div class="input-group">
+                <div class="input-group-addon">From:</div>
+                <input style="width:100px;" class="form-control" id="date_from" name="p.from" value="${p.from.date()}">
+              </div>
+            </div>
 
-      <select name="p.whouse.id" class="inline">
-        <option value="">仓库</option>
-      #{list items:whouses, as:'whouse'}
-        <option ${whouse.id == p.whouse?.id ? 'selected' : ''} value="${whouse.id}">
-        ${whouse.name}
-        </option>
-      #{/list}
-      </select>
+            <div class="form-group">
+              <div class="input-group">
+                <div class="input-group-addon">To:</div>
+                <input style="width:100px;" class="form-control" id="date_to" name="p.to" value="${p.to.date()}">
+              </div>
+            </div>
 
-      <select name="p.cooperatorId" class="inline selectize" style="width:150px;">
-        <option value="">供应商</option>
-      #{list items:cooperators, as:'cop'}
-        <option ${cop.id == p.cooperatorId ? 'selected' : ''} value="${cop.id}">${cop.name}</option>
-      #{/list}
-      </select>
+            <select name="p.whouse.id" class="form-control">
+              <option value="">仓库</option>
+            #{list items:whouses, as:'whouse'}
+              <option ${whouse.id == p.whouse?.id ? 'selected' : ''} value="${whouse.id}">
+              ${whouse.name}
+              </option>
+            #{/list}
+            </select>
 
-      <select name="p.type" class="inline">
-        <option value="">异动类型</option>
-      #{list items:models.whouse.StockRecord.T.values(), as:'t'}
-        <option value="${t.name()}" ${p.type==t ? 'selected' : ''}>${t.label()}</option>
-      #{/list}
-      </select>
+            <select name="p.cooperatorId" class="form-control selectize" style="width:150px;">
+              <option value="">供应商</option>
+            #{list items:cooperators, as:'cop'}
+              <option ${cop.id == p.cooperatorId ? 'selected' : ''} value="${cop.id}">${cop.name}</option>
+            #{/list}
+            </select>
 
-      <div class="input-prepend input-append inline">
-        <span class="add-on"><i class="icon-search"></i></span>
-        <input type="text" name="p.search" placeholder="SKU,采购计划ID,FBA" value="${p.search}" style="width:200px;">
-        <input type="hidden" name="p.page" value="${p.page}">
-        <button class="btn btn-primary" data-loading>搜索</button>
-      </div>
+            <select name="p.type" class="form-control">
+              <option value="">异动类型</option>
+            #{list items:models.whouse.StockRecord.T.values(), as:'t'}
+              <option value="${t.name()}" ${p.type==t ? 'selected' : ''}>${t.label()}</option>
+            #{/list}
+            </select>
 
-      <div class="inline">
-        <a href="javascript:void(0)" data-url="@{Excels.stockRecords(p)}" data-target="_blank" class="btn btn-info inline"
-           id="exportBtn">导出</a>
-      </div>
-    </div>
+            <div class="input-group">
+              <div class="input-group-addon"><i class="icon-search"></i></div>
+              <input class="form-control" name="p.search" style="width: 180px;" value="${p.search}" placeHolder="SKU,采购计划ID,FBA">
+            </div>
 
-    <div class="row-fluid">
-      <div class="span12">
-        <table class="table table-condensed table-bordered">
-          <tr>
-            <th>ID</th>
-            <th>仓库</th>
-            <th>采购计划ID</th>
-            <th>Selling</th>
-            <th>SKU</th>
-            <th>FBA</th>
-            <th>FBA 仓库</th>
-            <th>供应商</th>
-            <th>运输方式</th>
-            <th>项目名称</th>
-            <th>异动时间</th>
-            <th>异动数量</th>
-            <th>异动类型</th>
-            <th>异动类别</th>
-            <th>来源记录ID</th>
-            <th>操作人</th>
-          </tr>
-        #{list items: records, as: 'r'}
-          <tr>
-            <td>${r.id}</td>
-            <td>${r.whouse?.name}</td>
-            <td>
-              <a href="@{ProcureUnits.detail(r.unit?.id)}#${r.unit?.id}" target="_blank">${r.unit?.id}</a>
-            </td>
-            <td>${r.unit?.selling?.sellingId}</td>
-            <td><a target="_blank" href="@{Products.show(r.unit?.sku)}" rel="tooltip"
+            <button class="btn btn-primary" data-loading>搜索</button>
+            <input type="hidden" name="p.page" value="${p.page}">
+
+            <a href="javascript:void(0)" data-url="@{Excels.stockRecords(p)}" data-target="_blank" class="btn btn-success"
+               id="exportBtn">导出</a>
+          </div>
+        </div>
+        <div class="box-body">
+          <table class="table table-condensed table-bordered">
+            <tr>
+              <th>ID</th>
+              <th>仓库</th>
+              <th width="60px;">采购ID</th>
+              <th>Selling</th>
+              <th>SKU</th>
+              <th>FBA</th>
+              <th>FBA 仓库</th>
+              <th>供应商</th>
+              <th width="45px;" data-toggle="tooltip" title="运输方式">运输</th>
+              <th>项目名称</th>
+              <th width="150px;">异动时间</th>
+              <th>异动数量</th>
+              <th>异动类型</th>
+              <th>异动类别</th>
+              <th>来源记录ID</th>
+              <th>操作人</th>
+            </tr>
+          #{list items: records, as: 'r'}
+            <tr>
+              <td>${r.id}</td>
+              <td>${r.whouse?.name}</td>
+              <td>
+                <a href="@{ProcureUnits.detail(r.unit?.id)}#${r.unit?.id}" target="_blank">${r.unit?.id}</a>
+              </td>
+              <td>${r.unit?.selling?.sellingId}</td>
+              <td>
+                <a target="_blank" href="@{Products.show(r.unit?.sku)}" data-toggle="tooltip"
                    title="${r.unit?.product?.abbreviation}">${r.unit?.sku}</a>
-            </td>
-            <td>${r.unit?.fba?.shipmentId}</td>
-            <td>${r.unit?.whouse?.name}</td>
-            <td>${r.unit.cooperator?.name}</td>
-            <td>${r.unit?.shipType?.label()}</td>
-            <td>${r.unit?.projectName}</td>
-            <td>#{time_tooltip time: r.createDate, datetime: true/}</td>
-            <td>${r.qty}</td>
-            <td>${r.type.label()}</td>
-            <td>
-                #{if r.type == models.whouse.StockRecord.T.Unqualified_Transfer}
-                ${r.inboundType?.label()}
-                #{/if}
-                #{else }${r.category?.label()}#{/else}
-            </td>
-            <td>
-              <a href="${r.showRecordLink()}" target="_blank">${r.type.label()}记录 ${r.recordId}</a>
-            </td>
-            <td>${r.creator?.username}</td>
-          </tr>
-        #{/list}
-        </table>
-      </div>
-    </div>
-
-    <div class="row-fluid">
-      <div class="span12">
-      #{if records.size() == 0}
-        暂时还没有库存异动记录
-      #{/if}
-      #{else }
-          #{bootstrap_pager pi:p, url:'' /}
-      #{/else}
-      </div>
+              </td>
+              <td>${r.unit?.fba?.shipmentId}</td>
+              <td>${r.unit?.whouse?.name}</td>
+              <td>${r.unit.cooperator?.name}</td>
+              <td style="color:${r.unit?.shipType?.rgb()}">${r.unit?.shipType?.label()}</td>
+              <td>${r.unit?.projectName}</td>
+              <td>#{time_tooltip_v3 time: r.createDate, datetime: true/}</td>
+              <td>${r.qty}</td>
+              <td>${r.type.label()}</td>
+              <td>
+                  #{if r.type == models.whouse.StockRecord.T.Unqualified_Transfer}
+                  ${r.inboundType?.label()}
+                  #{/if}
+                  #{else }${r.category?.label()}#{/else}
+              </td>
+              <td>
+                <a href="${r.showRecordLink()}" target="_blank">${r.type.label()}记录 ${r.recordId}</a>
+              </td>
+              <td>${r.creator?.username}</td>
+            </tr>
+          #{/list}
+          </table>
+        </div>
+        <div class="box-footer">
+        #{if records.size() == 0}
+          暂时还没有库存异动记录
+        #{/if}
+        #{else }
+            #{bootstrap_pager_v3 pi:p, url:'' /}
+        #{/else}
+        </div>
+      </form>
     </div>
   </div>
-</form>
+</div>
 
