--- a/core/app/views/Orders/show.html
+++ b/core/app/views/Orders/show.html
@@ -2,7 +2,7 @@
     #{extends 'main_full_v3.html'/}
     #{set title:'Orders'/}
     #{set 'moreScripts'}
-        #{script 'orders/orders.coffee'/}
+        #{script 'orders/orders.es6'/}
     #{/set}
 #{/ifnot}
 #{flash_alert /}
