--- a/core/app/views/main_full_v3.html
+++ b/core/app/views/main_full_v3.html
@@ -29,7 +29,7 @@
 <div class="wrapper">
 
 #{render 'header_v3.html'/}
-  <div class="content-wrapper">
+  <div class="content-wrapper" id="container">
     <section class="content">
     #{doLayout /}
     </section>
