* 修改运输模块下产品属性列表的“HS CODE”字段不是必填项（目前是必填项）

--- a/core/app/views/Products/showAttr.html
+++ b/core/app/views/Products/showAttr.html
@@ -139,7 +139,7 @@
             <th>产品名称</th>
             <td><input type="text" style="width:95%" name="pro.abbreviation" value="${pro.abbreviation}"></td>
             <th>HS CODE</th>
-            <td><input type="text" name="pro.hs_code" placeholder="请输入HS CODE" value="${pro.hs_code}" required></td>
+            <td><input type="text" name="pro.hs_code" placeholder="请输入HS CODE" value="${pro.hs_code}" ></td>
           </tr>
           <tr>
             <th colspan="4">
