物料出货单 财务审核 新增权限验证

--- a/core/app/views/MaterialPlans/index.html
+++ b/core/app/views/MaterialPlans/index.html
@@ -40,12 +40,12 @@
         <input type="hidden" name="id" id="planId">
         <button class="btn btn-primary" data-loading>搜索</button>
       </div>
-
+    #{power.ck "materialplans.approve"}
       <div class="inline">
         <a href="javascript:void(0)" data-url='@{MaterialPlans.approveBatch()}' class="btn btn-warning inline"
            id="confirmMaterialPlanBtn">财务审核</a>
       </div>
-
+    #{/power.ck}
     </div>
   </div>
   <input type="hidden" name="p.page" value="${p.page}">
@@ -95,9 +95,12 @@
           <td>${dp.receiveCooperator?.name}</td>
           <td>
               #{if dp.financeState.name() == financeState.name()}
-                <!-- 只有出货单状态在 已出货 并且财务未审核的情况下 才出现财务审核的按钮 -->
-                <a href="javascript:void(0)" name="approveBtn" data-url='@{MaterialPlans.approve(dp.id)}'
-                   class="btn btn-mini btn-warning" uid="${dp.id}">审核</a>
+                  #{power.ck "materialplans.approve"}
+                    <!-- 只有出货单状态在 已出货 并且财务未审核的情况下 才出现财务审核的按钮 -->
+                    <a href="javascript:void(0)" name="approveBtn" data-url='@{MaterialPlans.approve(dp.id)}'
+                       class="btn btn-mini btn-warning" uid="${dp.id}">审核</a>
+                  #{/power.ck}
+                待审
               #{/if}
               #{else}
               ${dp.financeState?.label()}
