--- a/core/app/views/Application/index.html
+++ b/core/app/views/Application/index.html
@@ -11,4 +11,4 @@
 ${fba.capaticyContent.raw()}
 </div>
 #{/list}
-#{render 'Application/_orderTable.html', dashborad: dashborad /}
+#{render 'Application/_orderTable.html', dashborad: dashboard /}
